Thu, 13 Apr 2006 12:06:50 +0200 <thp@perli.net>
	* Added support for DESTDIR= in Makefile (thanks to Steve for 
	  pointing this out..)

Tue, 11 Apr 2006 18:53:00 +0200 <thp@perli.net>
	* Make directories recursively, more efficient (in libgpodder)

Mon, 10 Apr 2006 18:44:48 +0200 <thp@perli.net>
	* Added "Released" column to available podcasts list

Mon, 10 Apr 2006 09:48:00 +0200 <thp@perli.net>
	* Updated TODO list

Sun, 09 Apr 2006 18:10:54 +0200 <thp@perli.net>
	* Added iPodManager and iPod to libipodsync (D-BUSified)
	* Automatically detect connected iPod, ask if user wants to sync
	* Automatically eject iPod device on sync finish (should be opt.)
	* Python 2.4 is now used instead of Python 2.3 (for D-BUS)
	* Lots of D-BUS magic, still VERY experimental..
	* gPodder SVN will now feature very experimental D-BUS stuff in 
	  the near future, related to iPod, but it should keep working 
	  if you either haven't installed "gpod" or "dbus" for Python2.4
	* Send your RANTS about svn not working to thp@perli.net.. hehe
	* Updated German translation

Sun, 09 Apr 2006 14:10:28 +0200 <thp@perli.net>
	* Enabled podcast flag setting (works with libgpod cvs)
	* Fixed a brainfart of mine -- new localDB could not be created

Sat, 08 Apr 2006 16:39:08 +0200 <thp@perli.net>
	* Save more details in localDB
	* Show more details in podcast window

Sat, 08 Apr 2006 14:39:28 +0200 <thp@perli.net>
	* "debugging" variable set to True again
	* [ Bug #7016 ] corrupt file length -- fixed
	* Pushed version (we'll now keep 0.7+svn... until 0.8)
	* If debug output is disabled, also don't display wget commandline

Sat, 08 Apr 2006 12:30:59 +0200 <thp@perli.net>
	* ** gPodder version 0.7 is here! **
	* Bumped version number to 0.7
	* Updated documentation files, Manifest, ...
	* Thanks to all the contributors that helped make this release
	  possible, especially thanks to the gpodder-devel list users
	* Now, also set "debugging" variable to False for release
