@@ -1,3 +1,7 @@
+Fri, 14 Apr 2006 14:40:47 +0200 <thp@perli.net>
+	* Commented-out the "eject" call on end of iPod sync for now
+	* Fallback to default download dir if not able to create it
+
 Thu, 13 Apr 2006 12:06:50 +0200 <thp@perli.net>
 	* Added support for DESTDIR= in Makefile (thanks to Steve for 
 	  pointing this out..)
